--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "pwa-chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "\\index.html"
+            "file": "index.html"  //Got rid of the slashes, it doesn't load otherwise
         }
     ]
 }
